--- a/app/views/surveys/questions/index.html.haml
+++ b/app/views/surveys/questions/index.html.haml
@@ -11,7 +11,7 @@
 
 
 	.p-4
-		= render partial: "surveys/questions/questions", locals: {questions: @questions}
+		= render partial: "surveys/questions/questions", locals: {questions: @questions, survey: @survey, section: @section}
 		%turbo-frame{id: "new_question", data: {turbo: {action: "advance"}}}
 			- if @questions.empty?
 				%p There are currently no questions in this section.
