--- a/app/views/surveys/questions/index.html.haml
+++ b/app/views/surveys/questions/index.html.haml
@@ -5,9 +5,9 @@
 				%i.bi.bi-chevron-left{aria: {hidden: "true"}}
 		.flex-grow-1.p-2
 			%h2 Section #{@section.section_number} Questions
-		.p-2{data: {controller: "bootstrap"}}
-			%a.btn.btn-dark.btn-lg.border.border-light{href: new_survey_question_path(survey_slug: @survey.slug, sec_num: @section.section_number), title: "New Question", style: "border-radius: 50%", data: {turbo: {frame: "new_question"}, bs: {toggle: "tooltip", placement: "bottom", title: "New Question"}}}
-				%i.bi.bi-plus{aria: {hidden: "true"}}
+		-#.p-2{data: {controller: "bootstrap"}}
+			-#%a.btn.btn-dark.btn-lg.border.border-light{href: new_survey_question_path(survey_slug: @survey.slug, sec_num: @section.section_number), title: "New Question", style: "border-radius: 50%", data: {turbo: {frame: "new_question"}, bs: {toggle: "tooltip", placement: "bottom", title: "New Question"}}}
+				-#%i.bi.bi-plus{aria: {hidden: "true"}}
 
 
 	.p-4
@@ -15,3 +15,5 @@
 		%turbo-frame{id: "new_question", data: {turbo: {action: "advance"}}}
 			- if @questions.empty?
 				%p There are currently no questions in this section.
+			.mt-4
+				%a.btn.btn-dark.btn-lg{href: new_survey_question_path(survey_slug: @survey.slug, sec_num: @section.section_number)} Add Question
