--- a/app/views/surveys/responses/_rating.html.haml
+++ b/app/views/surveys/responses/_rating.html.haml
@@ -7,6 +7,6 @@
 	.row.mb-4
 		- q.options.order(rating_value: :asc).each do |o|
 			.col-12.d-grid.d-block.mb-2
-				= a.radio_button :question_option_ids,  o.id, class: "btn-check"
+				%input.btn-check{type: "radio", value: o.id, name: "survey_response[response_answers_attributes][#{a.index}][question_option_ids][]", id: "survey_response_response_answers_attributes_#{a.index}_question_option_ids_#{o.id}"}
 				- symlabel = ("question_option_ids_" + o.id).to_sym
 				= a.label symlabel, "#{o.rating_value} -- #{o.name}", class: "btn btn-outline-dark btn-lg text-start"
