--- a/app/views/challenges/new.html.haml
+++ b/app/views/challenges/new.html.haml
@@ -1,1 +1,1 @@
-= render partial: "form", locals: {challenge: @challenge}
+= render partial: "form", locals: {challenge: @challenge, banner: @banner}
