--- a/app/views/challenges/_form.html.haml
+++ b/app/views/challenges/_form.html.haml
@@ -1,5 +1,14 @@
 .col-xl-6.mx-auto.p-4
 	%h1 New Challenge
+	= form_with(model: challenge) do |f|
+		- unless challenge.photo.nil?
+			= f.fields_for :photo, challenge.photo do |p|
+				%img{src: url_for(challenge.photo.file), width: "100%"}
+				.form-group.mb-4
+					= p.label :file, "Change Photo"
+					= p.file_field :file, onChange: "requestSubmit()"
+				= p.hidden_field :id
+
 
 	= form_with(model: challenge) do |f|
 		
@@ -10,7 +19,7 @@
 				.row.form-group.mb-4
 					= p.label :file, "Cover Image"
 					= p.file_field :file
-					
+		
 		.row.form-floating
 			= f.text_field :title, placeholder: "Title", class: "form-control border border-dark"
 			= f.label :title, "Title"
