--- a/app/views/challenges/show.html.haml
+++ b/app/views/challenges/show.html.haml
@@ -7,7 +7,7 @@
 	
 	.d-flex
 		.flex-grow-1.p-2
-			%h1 #{@challenge.title}
+			%h1.text-center #{@challenge.title}
 		- if current_user&.admin?
 			.p-2
 				.dropdown
