--- a/app/views/fa_qs/new.html.haml
+++ b/app/views/fa_qs/new.html.haml
@@ -2,4 +2,4 @@
 	%h1 New Question
 
 	= form_with(model: @faq, url: challenge_faqs_path(@challenge)) do |f|
-		= render partial: "form", locals: {f: f}
+		= render partial: "form", locals: {f: f, faq: @faq}
