--- a/app/views/challenges/show.html.haml
+++ b/app/views/challenges/show.html.haml
@@ -86,22 +86,29 @@
 								.display-4.fw-bolder #{@donor_count}
 								.display-6.fw-bolder Donors				
 	
-	%figure.col-12.col-md-8.mb-4.mt-4.mx-auto
-		.h3.text-center{aria:{hidden: "true"}} Total Time By Activity
-		.text-muted.text-center{aria: {hidden: "true"}} #{@total_time}
-		%canvas{aria:{hidden: "true"}, data:{controller: "chart", chart:{data:{value: @chart_data.to_json}, type:{value: "pie"}, options: {value: @chart_options.to_json}}}}
-		%figcaption.text-center
-			A pie chart of "Total Time By Activity" with a subtitle calculating total time at #{@total_time} showing 
-			- count = []
-			- @challenge.activity_values.each do |a|
-				- unless a == 0
-					- count.append(a)
-			= count.count 
-			activities exercised, in minutes: 
-			- exercise_time_activity_options.each_with_index do |e, ei|
-				- @challenge.activity_values.each_with_index do |a, ai|
-					- if ei == ai and a > 0
-						#{e} at #{a}.
+	- if @challenge.challenge_type == "for_time"
+		%figure.col-12.col-md-8.mb-4.mt-4.mx-auto
+			- if @challenge.total_time > 0
+				.h3.text-center{aria:{hidden: "true"}} Total Time By Activity
+				.text-muted.text-center{aria: {hidden: "true"}} #{@total_time}
+			
+				%canvas{aria:{hidden: "true"}, data:{controller: "chart", chart:{data:{value: @chart_data.to_json}, type:{value: "pie"}, options: {value: @chart_options.to_json}}}}
+				%figcaption.text-center
+					A pie chart of "Total Time By Activity" with a subtitle calculating total time at #{@total_time} showing 
+					- count = []
+					- @challenge.activity_values.each do |a|
+						- unless a == 0
+							- count.append(a)
+						= count.count 
+					activities exercised, in minutes: 
+					- exercise_time_activity_options.each_with_index do |e, ei|
+						- @challenge.activity_values.each_with_index do |a, ai|
+							- if ei == ai and a > 0
+								#{e} at #{a}.
+			- else
+				.h3.text-center Total Time By Activity
+				.text-muted.text-center #{@total_time}
+			
 
 	- unless @fundraising.count == 0
 		%h2.text-center.mt-4 Fundraising Milestones
