--- a/app/views/exercise_trackers/new.html.haml
+++ b/app/views/exercise_trackers/new.html.haml
@@ -3,23 +3,39 @@
 
 	= form_with(model: @activity, url: challenge_participant_activities_path(@challenge, @participant)) do |f|
 		.form-floating.mb-4
-			= f.select :activity, options_for_select(exercise_activity_options), {prompt: "Choose One. . . "}, class: "form-select form-select-lg border border-dark"
+			- if @challenge.challenge_type == "for_time"
+				= f.select :activity, options_for_select(@challenge.exercise_time_options), {prompt: "Choose One. . . "}, class: "form-select form-select-lg border border-dark"
+			- elsif @challenge.challenge_type == "for_distance"
+				= f.select :activity, options_for_select(@challenge.exercise_distance_options), {prompt: "Choose One. . . "}, class: "form-select form-select-lg border border-dark"
 			= f.label :activity, "Activity"	
 
-		.fieldset.border.border-dark.p-2.mb-4
-			%legend Time
-			.input-group
-				.form-floating
-					= f.number_field :time_hour, class: "form-control border border-dark", min: 0, max: 59
-					= f.label :time_hour, "Hours"
-				%span.input-group-text :
-				.form-floating
-					= f.number_field :time_minute, class: "form-control border border-dark", min: 0, max: 59
-					= f.label :time_minute, "Minutes"
-				%span.input-group-text :
-				.form-floating
-					= f.number_field :time_second, class: "form-control border border-dark", min: 0, max: 59
-					= f.label :time_second, "Seconds"
+		- if @challenge.challenge_type == "for_time"
+			.fieldset.border.border-dark.p-2.mb-4
+				%legend Time
+				.input-group
+					.form-floating
+						= f.number_field :time_hour, class: "form-control border border-dark", min: 0, max: 59
+						= f.label :time_hour, "Hours"
+					%span.input-group-text :
+					.form-floating
+						= f.number_field :time_minute, class: "form-control border border-dark", min: 0, max: 59
+						= f.label :time_minute, "Minutes"
+					%span.input-group-text :
+					.form-floating
+						= f.number_field :time_second, class: "form-control border border-dark", min: 0, max: 59
+						= f.label :time_second, "Seconds"
+		- elsif @challenge.challenge_type == "for_distance"
+			.fieldset.border.border-dark.p-2.mb-4
+				%legend Distance
+				.row
+					.col-6.mb-4
+						.form-floating
+							= f.number_field :distance, placeholder: "Distance", class: "form-control border border-dark", step: "0.01"
+							= f.label :distance, "Distance"
+					.col-6.mb-4
+						.form-floating
+							= f.select :distance_unit, options_for_select(ExerciseTracker.distance_units.map { |key, value| [key.capitalize, key]}, @activity.distance_unit), {prompt: "Choose one. . . "}, class: "form-select border border-dark"
+							= f.label :distance_unit, "Distance Unit"
 
 		.form-floating.mb-4
 			= f.text_area :comment, placeholder: "Optional Note", class: "form-control border border-dark", data:{controller: "textarea-autogrow"}, style: "min-height: 10rem"
