--- a/app/views/challenges/show.html.haml
+++ b/app/views/challenges/show.html.haml
@@ -117,9 +117,9 @@
 			- else
 				.h3.text-center Total Distance By Activity
 				- if @challenge.total_distance > 0 
-					.text-muted.text-center{aria: {hidden: "true"}} #{number_with_precision(@challenge.total_distance, strip_insignificant_zeros: true, precision: 1)} Miles
+					.text-muted.text-center #{number_with_precision(@challenge.total_distance, strip_insignificant_zeros: true, precision: 1)} Miles
 				- else
-					No Activity Logged Yet
+					.text-muted.text-center No Activity Logged Yet
 
 	- unless @fundraising.count == 0
 		%h2.text-center.mt-4 Fundraising Milestones
