--- a/app/views/challenge_participants/show.html.haml
+++ b/app/views/challenge_participants/show.html.haml
@@ -85,7 +85,8 @@
 
 			- if current_user&.id == @participant.user.id
 				.row.mt-4.mb-4.p-4
-					= link_to "Log Activity", new_challenge_participant_activity_path(@challenge, @participant), class: "btn btn-lg btn-dark", role: "button"
+					- if Time.now > @challenge.start
+						= link_to "Log Activity", new_challenge_participant_activity_path(@challenge, @participant), class: "btn btn-lg btn-dark", role: "button"
 			- @activities.each do |a|
 				.row.mb-4
 					.col-12.col-md-3
