--- a/app/views/challenge_mailer/registered.html.haml
+++ b/app/views/challenge_mailer/registered.html.haml
@@ -1,26 +1,25 @@
 %p Hello #{@name}!
 
-%p Let’s get moving!
+%p Thank you for your interest in joining DBSAN’s June Virtual Challenge! By joining us, you are helping us raise awareness about DeafBlind people, and supporting our mission of educating people about and exposing people to DeafBlind people and our culture.
 
-%p Thank you for your interest in joining DBSAN’s first Exercise Challenge! By joining us, you are helping us raise awareness about DeafBlind people, and supporting our mission of educating people about and exposing people to DeafBlind people and our culture.
+%p By joining in our fundraiser, you are helping us raise much needed funding to support our DeafBlind Retreat of New England, happening this August.
 
-%p By joining in our fundraiser, you are helping us raise much needed funding to support our programs and services, such as covering costs for interpreters for workshops and panels, offering reduced costs and scholarships for our DeafBlind Retreat and other events.
+%p June's Virtual Challenge covers over 4,000 miles across the northern United States. There are approximately 16 stops on the way with information about the area. Stops include historical, natural, and cultural points of interest.
 
-%p December’s Exercise Challenge is to do 15.5 hours of exercise for the month. That’s equal to 30 minutes each day. You don’t need to do it all at one time!  You can break up the 30 minutes into 2 or 3 shorter segments in one day.  You can do more exercise some days if you know you can’t exercise other days, aiming for 15.5 total hours for the month.  You can even do more than 15.5 hours if you want!  It’s all up to you!
+%p But wait! Does this mean you have to walk 4,000 miles?! No, this is a collaborative Challenge. If you do some miles everyday, then all you have to do is add your distance to our online platform, and it'll keep track of everyone's distances and add them up.
 
-%p What are some exercise ideas? Walking on a treadmill, outside, or in a mall; riding a bike; doing yoga or martial arts; dancing; playing sports; and much more! The goal is to get up and MOVE!
+%p The goal is everyone can move at their own pace and together we will cross The United States virtually to raise awareness about DeafBlind people.
 
-%p A half hour of exercise a day keeps us in shape, and 30 minutes of exercise a day is proven to reduce depression and anxiety.  This challenge will allow us to motivate and support each other in reaching a group exercise goal!
+%p Once you are ready to get started, head back to your DBSAN Challenges. Click on register to log in. You should now be on your participant page. Here you will be able to post your distances, view your earned badges, and check your donations.
 
-%p Once you are ready to get started, head back to your <a href="https://www.dbsan.org/challenges">DBSAN Challenges</a> and click on the December challenge. Click on register to log in. You should now be on your participant page. Here you will be able to update your exercise time, view your earned badges, and check your donations and how far to the next prize.
+Prizes for reaching donation goals are as follows:
 
-%p Prizes for reaching donation goals are as follows:
-%ul
-	%li Raise $150, get a DBSAN shirt.
-	%li Raise $300, get a DBSAN collectible exercise challenge coin
-	%li Raise $1000, get a meteor vibrating watch
-	%li GRAND PRIZE - Raise $5000, get a 2022 12.9 inch iPad Pro
+%ul 
+	%li Raise $50, get a DBSAN Challenge Coin.
+	%li Raise $200, have your name on our “Thanks to our Sponsors” banner at our DeafBlind Retreat
+	%li Raise $400, have your name in our Retreat Program Brochure on Visitors’ Day
 
-%p Ready to get started? 
+%p Ready to get started?
+
 
 %p Join our <a href="https://www.facebook.com/groups/683902156484187">Facebook group</a> to be part of the community.
