--- a/app/views/layouts/footer/_social.html.haml
+++ b/app/views/layouts/footer/_social.html.haml
@@ -1,7 +1,7 @@
-- if @networks.count > 0 then
+- if @channel.social_networks.count > 0 then
   .container.text-center
     %span.text-muted Connect with us on social media:<br>
-    - @networks.each do |network| 
+    - @channel.social_networks.each do |network| 
       %a.btn.btn-lg{href: "#{network.url}", target: "_blank", title: "#{network.name}", data:{bs:{toggle: "tooltip", placement: "top"}}, aria:{label: "#{network.name}"}}
         %i{class: "#{network.icon_class}", aria:{hidden: "true"}}
       
