--- a/app/views/layouts/footer/_social.html.haml
+++ b/app/views/layouts/footer/_social.html.haml
@@ -1,8 +1,7 @@
 - if @channel.social_networks.count > 0 then
-  .container.text-center
+  .container.text-center{data: {controller: "bootstrap"}}
     %span.text-muted Connect with us on social media:<br>
-    - @channel.social_networks.each do |network| 
-      %a.btn.btn-lg{href: "#{network.url}", target: "_blank", title: "#{network.name}", data:{bs:{toggle: "tooltip", placement: "top"}}, aria:{label: "#{network.name}"}}
+    - @channel.social_networks.each do |n|
+      %a{href: "#{network.url}", target: "_blank", title: "#{network.name}", data:{bs:{toggle: "tooltip", placement: "top", title: "#{network.name}"}}, aria:{label: "#{network.name}"}}
         %i{class: "#{network.icon_class}", aria:{hidden: "true"}}
-      
     
