--- a/app/views/challenge_milestones/edit.html.haml
+++ b/app/views/challenge_milestones/edit.html.haml
@@ -2,4 +2,4 @@
 	%h1 Edit Milestone
 
 	= form_with(model: @milestone, url: challenge_milestone_path(@challenge, @milestone)) do |f|
-		= render partial: "form", locals: {f: f, milestone: @milestone, badge: @badge}
+		= render partial: "form", locals: {f: f, milestone: @milestone, badge: @badge, challenge: @challenge}
